src/snapshots/redmine_tui_draft__test_support__header_narrow_long_title_wrap.snap
---
source: src/test_support.rs
expression: describe_buffer(terminal.backend().buffer())
---
area=Rect { x: 0, y: 0, width: 18, height: 5 }
00: "#42  A very long  " | 0:"#" fg=Rgb(122, 162, 247) bg=Rgb(42, 47, 65) mod=BOLD, 1:"4" fg=Rgb(122, 162, 247) bg=Rgb(42, 47, 65) mod=BOLD, 2:"2" fg=Rgb(122, 162, 247) bg=Rgb(42, 47, 65) mod=BOLD, 3:" " fg=Rgb(122, 162, 247) bg=Rgb(42, 47, 65) mod=BOLD, 5:"A" fg=Reset bg=Reset mod=BOLD, 6:" " fg=Reset bg=Reset mod=BOLD, 7:"v" fg=Reset bg=Reset mod=BOLD, 8:"e" fg=Reset bg=Reset mod=BOLD, 9:"r" fg=Reset bg=Reset mod=BOLD, 10:"y" fg=Reset bg=Reset mod=BOLD, 11:" " fg=Reset bg=Reset mod=BOLD, 12:"l" fg=Reset bg=Reset mod=BOLD, 13:"o" fg=Reset bg=Reset mod=BOLD, 14:"n" fg=Reset bg=Reset mod=BOLD, 15:"g" fg=Reset bg=Reset mod=BOLD
01: "title for         " | 0:"t" fg=Reset bg=Reset mod=BOLD, 1:"i" fg=Reset bg=Reset mod=BOLD, 2:"t" fg=Reset bg=Reset mod=BOLD, 3:"l" fg=Reset bg=Reset mod=BOLD, 4:"e" fg=Reset bg=Reset mod=BOLD, 5:" " fg=Reset bg=Reset mod=BOLD, 6:"f" fg=Reset bg=Reset mod=BOLD, 7:"o" fg=Reset bg=Reset mod=BOLD, 8:"r" fg=Reset bg=Reset mod=BOLD
02: "observing current " | 0:"o" fg=Reset bg=Reset mod=BOLD, 1:"b" fg=Reset bg=Reset mod=BOLD, 2:"s" fg=Reset bg=Reset mod=BOLD, 3:"e" fg=Reset bg=Reset mod=BOLD, 4:"r" fg=Reset bg=Reset mod=BOLD, 5:"v" fg=Reset bg=Reset mod=BOLD, 6:"i" fg=Reset bg=Reset mod=BOLD, 7:"n" fg=Reset bg=Reset mod=BOLD, 8:"g" fg=Reset bg=Reset mod=BOLD, 9:" " fg=Reset bg=Reset mod=BOLD, 10:"c" fg=Reset bg=Reset mod=BOLD, 11:"u" fg=Reset bg=Reset mod=BOLD, 12:"r" fg=Reset bg=Reset mod=BOLD, 13:"r" fg=Reset bg=Reset mod=BOLD, 14:"e" fg=Reset bg=Reset mod=BOLD, 15:"n" fg=Reset bg=Reset mod=BOLD, 16:"t" fg=Reset bg=Reset mod=BOLD
03: "paragraph behavior" | 0:"p" fg=Reset bg=Reset mod=BOLD, 1:"a" fg=Reset bg=Reset mod=BOLD, 2:"r" fg=Reset bg=Reset mod=BOLD, 3:"a" fg=Reset bg=Reset mod=BOLD, 4:"g" fg=Reset bg=Reset mod=BOLD, 5:"r" fg=Reset bg=Reset mod=BOLD, 6:"a" fg=Reset bg=Reset mod=BOLD, 7:"p" fg=Reset bg=Reset mod=BOLD, 8:"h" fg=Reset bg=Reset mod=BOLD, 9:" " fg=Reset bg=Reset mod=BOLD, 10:"b" fg=Reset bg=Reset mod=BOLD, 11:"e" fg=Reset bg=Reset mod=BOLD, 12:"h" fg=Reset bg=Reset mod=BOLD, 13:"a" fg=Reset bg=Reset mod=BOLD, 14:"v" fg=Reset bg=Reset mod=BOLD, 15:"i" fg=Reset bg=Reset mod=BOLD, 16:"o" fg=Reset bg=Reset mod=BOLD, 17:"r" fg=Reset bg=Reset mod=BOLD
04: "                  "
