src/snapshots/redmine_tui_draft__test_support__header_unsynced_title.snap
---
source: src/test_support.rs
expression: describe_buffer(terminal.backend().buffer())
---
area=Rect { x: 0, y: 0, width: 40, height: 2 }
00: "#42  ＊ 未 保 存  Widget snapshot baseline  " | 0:"#" fg=Rgb(122, 162, 247) bg=Rgb(46, 58, 85) mod=BOLD, 1:"4" fg=Rgb(122, 162, 247) bg=Rgb(46, 58, 85) mod=BOLD, 2:"2" fg=Rgb(122, 162, 247) bg=Rgb(46, 58, 85) mod=BOLD, 3:" " fg=Rgb(122, 162, 247) bg=Rgb(46, 58, 85) mod=BOLD, 4:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 5:"＊" fg=Rgb(128, 138, 158) bg=Rgb(46, 58, 85) mod=NONE, 7:"未" fg=Rgb(128, 138, 158) bg=Rgb(46, 58, 85) mod=NONE, 9:"保" fg=Rgb(128, 138, 158) bg=Rgb(46, 58, 85) mod=NONE, 11:"存" fg=Rgb(128, 138, 158) bg=Rgb(46, 58, 85) mod=NONE, 13:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 14:"W" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 15:"i" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 16:"d" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 17:"g" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 18:"e" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 19:"t" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 20:" " fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 21:"s" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 22:"n" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 23:"a" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 24:"p" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 25:"s" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 26:"h" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 27:"o" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 28:"t" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 29:" " fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 30:"b" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 31:"a" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 32:"s" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 33:"e" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 34:"l" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 35:"i" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 36:"n" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 37:"e" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 38:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 39:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE
01: "                                        "
