src/snapshots/redmine_tui_draft__test_support__header_uploading_title.snap
---
source: src/test_support.rs
expression: describe_buffer(terminal.backend().buffer())
---
area=Rect { x: 0, y: 0, width: 40, height: 2 }
00: "#42  ↑送 信 中  Widget snapshot baseline   " | 0:"#" fg=Rgb(122, 162, 247) bg=Rgb(46, 58, 85) mod=BOLD, 1:"4" fg=Rgb(122, 162, 247) bg=Rgb(46, 58, 85) mod=BOLD, 2:"2" fg=Rgb(122, 162, 247) bg=Rgb(46, 58, 85) mod=BOLD, 3:" " fg=Rgb(122, 162, 247) bg=Rgb(46, 58, 85) mod=BOLD, 4:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 5:"↑" fg=Rgb(128, 138, 158) bg=Rgb(46, 58, 85) mod=NONE, 6:"送" fg=Rgb(128, 138, 158) bg=Rgb(46, 58, 85) mod=NONE, 8:"信" fg=Rgb(128, 138, 158) bg=Rgb(46, 58, 85) mod=NONE, 10:"中" fg=Rgb(128, 138, 158) bg=Rgb(46, 58, 85) mod=NONE, 12:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 13:"W" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 14:"i" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 15:"d" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 16:"g" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 17:"e" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 18:"t" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 19:" " fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 20:"s" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 21:"n" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 22:"a" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 23:"p" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 24:"s" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 25:"h" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 26:"o" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 27:"t" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 28:" " fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 29:"b" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 30:"a" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 31:"s" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 32:"e" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 33:"l" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 34:"i" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 35:"n" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 36:"e" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 37:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 38:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 39:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE
01: "                                        "
