src/snapshots/redmine_tui_draft__test_support__header_wide_short_title.snap
---
source: src/test_support.rs
expression: describe_buffer(terminal.backend().buffer())
---
area=Rect { x: 0, y: 0, width: 40, height: 2 }
00: "#42  Widget snapshot baseline           " | 0:"#" fg=Rgb(122, 162, 247) bg=Rgb(46, 58, 85) mod=BOLD, 1:"4" fg=Rgb(122, 162, 247) bg=Rgb(46, 58, 85) mod=BOLD, 2:"2" fg=Rgb(122, 162, 247) bg=Rgb(46, 58, 85) mod=BOLD, 3:" " fg=Rgb(122, 162, 247) bg=Rgb(46, 58, 85) mod=BOLD, 4:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 5:"W" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 6:"i" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 7:"d" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 8:"g" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 9:"e" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 10:"t" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 11:" " fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 12:"s" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 13:"n" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 14:"a" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 15:"p" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 16:"s" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 17:"h" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 18:"o" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 19:"t" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 20:" " fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 21:"b" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 22:"a" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 23:"s" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 24:"e" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 25:"l" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 26:"i" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 27:"n" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 28:"e" fg=Reset bg=Rgb(46, 58, 85) mod=BOLD, 29:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 30:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 31:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 32:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 33:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 34:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 35:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 36:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 37:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 38:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 39:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE
01: "                                        "
