src/snapshots/redmine_tui_draft__test_support__hr_width_8.snap
---
source: src/test_support.rs
assertion_line: 28
expression: describe_buffer(terminal.backend().buffer())
---
area=Rect { x: 0, y: 0, width: 8, height: 1 }
00: "────────" | 0:"─" fg=Reset bg=Reset mod=NONE, 1:"─" fg=Reset bg=Reset mod=NONE, 2:"─" fg=Reset bg=Reset mod=NONE, 3:"─" fg=Reset bg=Reset mod=NONE, 4:"─" fg=Reset bg=Reset mod=NONE, 5:"─" fg=Reset bg=Reset mod=NONE, 6:"─" fg=Reset bg=Reset mod=NONE, 7:"─" fg=Reset bg=Reset mod=NONE
