src/snapshots/redmine_tui_draft__test_support__issue_detail_body_tail_and_children_head.snap
---
source: src/test_support.rs
expression: describe_buffer(terminal.backend().buffer())
---
area=Rect { x: 0, y: 0, width: 40, height: 10 }
00: "#42                                     " | 0:"#" fg=Reset bg=Reset mod=NONE, 1:"4" fg=Reset bg=Reset mod=NONE, 2:"2" fg=Reset bg=Reset mod=NONE
01: "                                        "
02: "Issue detail widget snapshot            " | 0:"I" fg=Reset bg=Reset mod=BOLD, 1:"s" fg=Reset bg=Reset mod=BOLD, 2:"s" fg=Reset bg=Reset mod=BOLD, 3:"u" fg=Reset bg=Reset mod=BOLD, 4:"e" fg=Reset bg=Reset mod=BOLD, 5:" " fg=Reset bg=Reset mod=BOLD, 6:"d" fg=Reset bg=Reset mod=BOLD, 7:"e" fg=Reset bg=Reset mod=BOLD, 8:"t" fg=Reset bg=Reset mod=BOLD, 9:"a" fg=Reset bg=Reset mod=BOLD, 10:"i" fg=Reset bg=Reset mod=BOLD, 11:"l" fg=Reset bg=Reset mod=BOLD, 12:" " fg=Reset bg=Reset mod=BOLD, 13:"w" fg=Reset bg=Reset mod=BOLD, 14:"i" fg=Reset bg=Reset mod=BOLD, 15:"d" fg=Reset bg=Reset mod=BOLD, 16:"g" fg=Reset bg=Reset mod=BOLD, 17:"e" fg=Reset bg=Reset mod=BOLD, 18:"t" fg=Reset bg=Reset mod=BOLD, 19:" " fg=Reset bg=Reset mod=BOLD, 20:"s" fg=Reset bg=Reset mod=BOLD, 21:"n" fg=Reset bg=Reset mod=BOLD, 22:"a" fg=Reset bg=Reset mod=BOLD, 23:"p" fg=Reset bg=Reset mod=BOLD, 24:"s" fg=Reset bg=Reset mod=BOLD, 25:"h" fg=Reset bg=Reset mod=BOLD, 26:"o" fg=Reset bg=Reset mod=BOLD, 27:"t" fg=Reset bg=Reset mod=BOLD
03: "                                        "
04: "Body paragraph with enough words to wrap" | 0:"B" fg=Reset bg=Reset mod=NONE, 1:"o" fg=Reset bg=Reset mod=NONE, 2:"d" fg=Reset bg=Reset mod=NONE, 3:"y" fg=Reset bg=Reset mod=NONE, 5:"p" fg=Reset bg=Reset mod=NONE, 6:"a" fg=Reset bg=Reset mod=NONE, 7:"r" fg=Reset bg=Reset mod=NONE, 8:"a" fg=Reset bg=Reset mod=NONE, 9:"g" fg=Reset bg=Reset mod=NONE, 10:"r" fg=Reset bg=Reset mod=NONE, 11:"a" fg=Reset bg=Reset mod=NONE, 12:"p" fg=Reset bg=Reset mod=NONE, 13:"h" fg=Reset bg=Reset mod=NONE, 15:"w" fg=Reset bg=Reset mod=NONE, 16:"i" fg=Reset bg=Reset mod=NONE, 17:"t" fg=Reset bg=Reset mod=NONE, 18:"h" fg=Reset bg=Reset mod=NONE, 20:"e" fg=Reset bg=Reset mod=NONE, 21:"n" fg=Reset bg=Reset mod=NONE, 22:"o" fg=Reset bg=Reset mod=NONE, 23:"u" fg=Reset bg=Reset mod=NONE, 24:"g" fg=Reset bg=Reset mod=NONE, 25:"h" fg=Reset bg=Reset mod=NONE, 27:"w" fg=Reset bg=Reset mod=NONE, 28:"o" fg=Reset bg=Reset mod=NONE, 29:"r" fg=Reset bg=Reset mod=NONE, 30:"d" fg=Reset bg=Reset mod=NONE, 31:"s" fg=Reset bg=Reset mod=NONE, 33:"t" fg=Reset bg=Reset mod=NONE, 34:"o" fg=Reset bg=Reset mod=NONE, 36:"w" fg=Reset bg=Reset mod=NONE, 37:"r" fg=Reset bg=Reset mod=NONE, 38:"a" fg=Reset bg=Reset mod=NONE, 39:"p" fg=Reset bg=Reset mod=NONE
05: "in narrow layouts.                      " | 0:"i" fg=Reset bg=Reset mod=NONE, 1:"n" fg=Reset bg=Reset mod=NONE, 3:"n" fg=Reset bg=Reset mod=NONE, 4:"a" fg=Reset bg=Reset mod=NONE, 5:"r" fg=Reset bg=Reset mod=NONE, 6:"r" fg=Reset bg=Reset mod=NONE, 7:"o" fg=Reset bg=Reset mod=NONE, 8:"w" fg=Reset bg=Reset mod=NONE, 10:"l" fg=Reset bg=Reset mod=NONE, 11:"a" fg=Reset bg=Reset mod=NONE, 12:"y" fg=Reset bg=Reset mod=NONE, 13:"o" fg=Reset bg=Reset mod=NONE, 14:"u" fg=Reset bg=Reset mod=NONE, 15:"t" fg=Reset bg=Reset mod=NONE, 16:"s" fg=Reset bg=Reset mod=NONE, 17:"." fg=Reset bg=Reset mod=NONE
06: "────────────────────────────────────────" | 0:"─" fg=Reset bg=Reset mod=NONE, 1:"─" fg=Reset bg=Reset mod=NONE, 2:"─" fg=Reset bg=Reset mod=NONE, 3:"─" fg=Reset bg=Reset mod=NONE, 4:"─" fg=Reset bg=Reset mod=NONE, 5:"─" fg=Reset bg=Reset mod=NONE, 6:"─" fg=Reset bg=Reset mod=NONE, 7:"─" fg=Reset bg=Reset mod=NONE, 8:"─" fg=Reset bg=Reset mod=NONE, 9:"─" fg=Reset bg=Reset mod=NONE, 10:"─" fg=Reset bg=Reset mod=NONE, 11:"─" fg=Reset bg=Reset mod=NONE, 12:"─" fg=Reset bg=Reset mod=NONE, 13:"─" fg=Reset bg=Reset mod=NONE, 14:"─" fg=Reset bg=Reset mod=NONE, 15:"─" fg=Reset bg=Reset mod=NONE, 16:"─" fg=Reset bg=Reset mod=NONE, 17:"─" fg=Reset bg=Reset mod=NONE, 18:"─" fg=Reset bg=Reset mod=NONE, 19:"─" fg=Reset bg=Reset mod=NONE, 20:"─" fg=Reset bg=Reset mod=NONE, 21:"─" fg=Reset bg=Reset mod=NONE, 22:"─" fg=Reset bg=Reset mod=NONE, 23:"─" fg=Reset bg=Reset mod=NONE, 24:"─" fg=Reset bg=Reset mod=NONE, 25:"─" fg=Reset bg=Reset mod=NONE, 26:"─" fg=Reset bg=Reset mod=NONE, 27:"─" fg=Reset bg=Reset mod=NONE, 28:"─" fg=Reset bg=Reset mod=NONE, 29:"─" fg=Reset bg=Reset mod=NONE, 30:"─" fg=Reset bg=Reset mod=NONE, 31:"─" fg=Reset bg=Reset mod=NONE, 32:"─" fg=Reset bg=Reset mod=NONE, 33:"─" fg=Reset bg=Reset mod=NONE, 34:"─" fg=Reset bg=Reset mod=NONE, 35:"─" fg=Reset bg=Reset mod=NONE, 36:"─" fg=Reset bg=Reset mod=NONE, 37:"─" fg=Reset bg=Reset mod=NONE, 38:"─" fg=Reset bg=Reset mod=NONE, 39:"─" fg=Reset bg=Reset mod=NONE
07: "子 チ ケ ッ ト  1 (1件 未 完 了  - 0件 完 了 )      " | 0:"子" fg=Reset bg=Reset mod=NONE, 2:"チ" fg=Reset bg=Reset mod=NONE, 4:"ケ" fg=Reset bg=Reset mod=NONE, 6:"ッ" fg=Reset bg=Reset mod=NONE, 8:"ト" fg=Reset bg=Reset mod=NONE, 11:"1" fg=Reset bg=Reset mod=NONE, 13:"(" fg=Reset bg=Reset mod=NONE, 14:"1" fg=Reset bg=Reset mod=NONE, 15:"件" fg=Reset bg=Reset mod=NONE, 17:"未" fg=Reset bg=Reset mod=NONE, 19:"完" fg=Reset bg=Reset mod=NONE, 21:"了" fg=Reset bg=Reset mod=NONE, 24:"-" fg=Reset bg=Reset mod=NONE, 26:"0" fg=Reset bg=Reset mod=NONE, 27:"件" fg=Reset bg=Reset mod=NONE, 29:"完" fg=Reset bg=Reset mod=NONE, 31:"了" fg=Reset bg=Reset mod=NONE, 33:")" fg=Reset bg=Reset mod=NONE
08: "                                        "
09: "#7         al 2026/01/10 2026/01/20  35%" | 0:"#" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 1:"7" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 2:" " fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 3:" " fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 4:" " fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 5:" " fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 6:" " fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 7:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 8:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 9:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 10:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 11:"a" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 12:"l" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 13:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 14:"2" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 15:"0" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 16:"2" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 17:"6" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 18:"/" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 19:"0" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 20:"1" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 21:"/" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 22:"1" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 23:"0" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 24:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 25:"2" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 26:"0" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 27:"2" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 28:"6" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 29:"/" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 30:"0" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 31:"1" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 32:"/" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 33:"2" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 34:"0" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 35:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 36:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 37:"3" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 38:"5" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 39:"%" fg=Reset bg=Rgb(26, 51, 34) mod=NONE
