src/snapshots/redmine_tui_draft__test_support__issue_detail_children_tail_and_journals_head.snap
---
source: src/test_support.rs
expression: describe_buffer(terminal.backend().buffer())
---
area=Rect { x: 0, y: 0, width: 40, height: 10 }
00: "#42                                     " | 0:"#" fg=Reset bg=Reset mod=NONE, 1:"4" fg=Reset bg=Reset mod=NONE, 2:"2" fg=Reset bg=Reset mod=NONE
01: "                                        "
02: "Issue detail widget snapshot            " | 0:"I" fg=Reset bg=Reset mod=BOLD, 1:"s" fg=Reset bg=Reset mod=BOLD, 2:"s" fg=Reset bg=Reset mod=BOLD, 3:"u" fg=Reset bg=Reset mod=BOLD, 4:"e" fg=Reset bg=Reset mod=BOLD, 5:" " fg=Reset bg=Reset mod=BOLD, 6:"d" fg=Reset bg=Reset mod=BOLD, 7:"e" fg=Reset bg=Reset mod=BOLD, 8:"t" fg=Reset bg=Reset mod=BOLD, 9:"a" fg=Reset bg=Reset mod=BOLD, 10:"i" fg=Reset bg=Reset mod=BOLD, 11:"l" fg=Reset bg=Reset mod=BOLD, 12:" " fg=Reset bg=Reset mod=BOLD, 13:"w" fg=Reset bg=Reset mod=BOLD, 14:"i" fg=Reset bg=Reset mod=BOLD, 15:"d" fg=Reset bg=Reset mod=BOLD, 16:"g" fg=Reset bg=Reset mod=BOLD, 17:"e" fg=Reset bg=Reset mod=BOLD, 18:"t" fg=Reset bg=Reset mod=BOLD, 19:" " fg=Reset bg=Reset mod=BOLD, 20:"s" fg=Reset bg=Reset mod=BOLD, 21:"n" fg=Reset bg=Reset mod=BOLD, 22:"a" fg=Reset bg=Reset mod=BOLD, 23:"p" fg=Reset bg=Reset mod=BOLD, 24:"s" fg=Reset bg=Reset mod=BOLD, 25:"h" fg=Reset bg=Reset mod=BOLD, 26:"o" fg=Reset bg=Reset mod=BOLD, 27:"t" fg=Reset bg=Reset mod=BOLD
03: "                                        "
04: "#7         al 2026/01/10 2026/01/20  35%" | 0:"#" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 1:"7" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 2:" " fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 3:" " fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 4:" " fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 5:" " fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 6:" " fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 7:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 8:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 9:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 10:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 11:"a" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 12:"l" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 13:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 14:"2" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 15:"0" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 16:"2" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 17:"6" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 18:"/" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 19:"0" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 20:"1" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 21:"/" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 22:"1" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 23:"0" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 24:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 25:"2" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 26:"0" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 27:"2" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 28:"6" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 29:"/" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 30:"0" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 31:"1" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 32:"/" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 33:"2" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 34:"0" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 35:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 36:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 37:"3" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 38:"5" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 39:"%" fg=Reset bg=Rgb(26, 51, 34) mod=NONE
05: "                                        "
06: "────────────────────────────────────────" | 0:"─" fg=Reset bg=Reset mod=NONE, 1:"─" fg=Reset bg=Reset mod=NONE, 2:"─" fg=Reset bg=Reset mod=NONE, 3:"─" fg=Reset bg=Reset mod=NONE, 4:"─" fg=Reset bg=Reset mod=NONE, 5:"─" fg=Reset bg=Reset mod=NONE, 6:"─" fg=Reset bg=Reset mod=NONE, 7:"─" fg=Reset bg=Reset mod=NONE, 8:"─" fg=Reset bg=Reset mod=NONE, 9:"─" fg=Reset bg=Reset mod=NONE, 10:"─" fg=Reset bg=Reset mod=NONE, 11:"─" fg=Reset bg=Reset mod=NONE, 12:"─" fg=Reset bg=Reset mod=NONE, 13:"─" fg=Reset bg=Reset mod=NONE, 14:"─" fg=Reset bg=Reset mod=NONE, 15:"─" fg=Reset bg=Reset mod=NONE, 16:"─" fg=Reset bg=Reset mod=NONE, 17:"─" fg=Reset bg=Reset mod=NONE, 18:"─" fg=Reset bg=Reset mod=NONE, 19:"─" fg=Reset bg=Reset mod=NONE, 20:"─" fg=Reset bg=Reset mod=NONE, 21:"─" fg=Reset bg=Reset mod=NONE, 22:"─" fg=Reset bg=Reset mod=NONE, 23:"─" fg=Reset bg=Reset mod=NONE, 24:"─" fg=Reset bg=Reset mod=NONE, 25:"─" fg=Reset bg=Reset mod=NONE, 26:"─" fg=Reset bg=Reset mod=NONE, 27:"─" fg=Reset bg=Reset mod=NONE, 28:"─" fg=Reset bg=Reset mod=NONE, 29:"─" fg=Reset bg=Reset mod=NONE, 30:"─" fg=Reset bg=Reset mod=NONE, 31:"─" fg=Reset bg=Reset mod=NONE, 32:"─" fg=Reset bg=Reset mod=NONE, 33:"─" fg=Reset bg=Reset mod=NONE, 34:"─" fg=Reset bg=Reset mod=NONE, 35:"─" fg=Reset bg=Reset mod=NONE, 36:"─" fg=Reset bg=Reset mod=NONE, 37:"─" fg=Reset bg=Reset mod=NONE, 38:"─" fg=Reset bg=Reset mod=NONE, 39:"─" fg=Reset bg=Reset mod=NONE
07: "aliceが 2026/01/15に 更 新                  " | 0:"a" fg=Blue bg=Reset mod=NONE, 1:"l" fg=Blue bg=Reset mod=NONE, 2:"i" fg=Blue bg=Reset mod=NONE, 3:"c" fg=Blue bg=Reset mod=NONE, 4:"e" fg=Blue bg=Reset mod=NONE, 5:"が" fg=Reset bg=Reset mod=NONE, 7:"2" fg=Blue bg=Reset mod=NONE, 8:"0" fg=Blue bg=Reset mod=NONE, 9:"2" fg=Blue bg=Reset mod=NONE, 10:"6" fg=Blue bg=Reset mod=NONE, 11:"/" fg=Blue bg=Reset mod=NONE, 12:"0" fg=Blue bg=Reset mod=NONE, 13:"1" fg=Blue bg=Reset mod=NONE, 14:"/" fg=Blue bg=Reset mod=NONE, 15:"1" fg=Blue bg=Reset mod=NONE, 16:"5" fg=Blue bg=Reset mod=NONE, 17:"に" fg=Reset bg=Reset mod=NONE, 19:"更" fg=Reset bg=Reset mod=NONE, 21:"新" fg=Reset bg=Reset mod=NONE
08: "                                        "
09: "  ・  担 当 者  を  (な し ) か ら  bob に 変 更    " | 0:" " fg=Gray bg=Reset mod=NONE, 1:" " fg=Gray bg=Reset mod=NONE, 2:"・" fg=Gray bg=Reset mod=NONE, 4:" " fg=Gray bg=Reset mod=NONE, 5:"担" fg=Gray bg=Reset mod=BOLD, 7:"当" fg=Gray bg=Reset mod=BOLD, 9:"者" fg=Gray bg=Reset mod=BOLD, 11:" " fg=Gray bg=Reset mod=NONE, 12:"を" fg=Gray bg=Reset mod=NONE, 14:" " fg=Gray bg=Reset mod=NONE, 15:"(" fg=Gray bg=Reset mod=ITALIC, 16:"な" fg=Gray bg=Reset mod=ITALIC, 18:"し" fg=Gray bg=Reset mod=ITALIC, 20:")" fg=Gray bg=Reset mod=ITALIC, 21:" " fg=Gray bg=Reset mod=NONE, 22:"か" fg=Gray bg=Reset mod=NONE, 24:"ら" fg=Gray bg=Reset mod=NONE, 26:" " fg=Gray bg=Reset mod=NONE, 27:"b" fg=Gray bg=Reset mod=ITALIC, 28:"o" fg=Gray bg=Reset mod=ITALIC, 29:"b" fg=Gray bg=Reset mod=ITALIC, 30:" " fg=Gray bg=Reset mod=NONE, 31:"に" fg=Gray bg=Reset mod=NONE, 33:"変" fg=Gray bg=Reset mod=NONE, 35:"更" fg=Gray bg=Reset mod=NONE
