src/snapshots/redmine_tui_draft__test_support__issue_detail_cursor_in_header.snap
---
source: src/test_support.rs
expression: describe_buffer(terminal.backend().buffer())
---
area=Rect { x: 0, y: 0, width: 40, height: 10 }
00: "#42  Issue detail widget snapshot       " | 0:"#" fg=Rgb(122, 162, 247) bg=Rgb(42, 47, 65) mod=BOLD, 1:"4" fg=Rgb(122, 162, 247) bg=Rgb(42, 47, 65) mod=BOLD, 2:"2" fg=Rgb(122, 162, 247) bg=Rgb(42, 47, 65) mod=BOLD, 3:" " fg=Rgb(122, 162, 247) bg=Rgb(42, 47, 65) mod=BOLD, 5:"I" fg=Reset bg=Reset mod=BOLD, 6:"s" fg=Reset bg=Reset mod=BOLD, 7:"s" fg=Reset bg=Reset mod=BOLD, 8:"u" fg=Reset bg=Reset mod=BOLD, 9:"e" fg=Reset bg=Reset mod=BOLD, 10:" " fg=Reset bg=Reset mod=BOLD, 11:"d" fg=Reset bg=Reset mod=BOLD, 12:"e" fg=Reset bg=Reset mod=BOLD, 13:"t" fg=Reset bg=Reset mod=BOLD, 14:"a" fg=Reset bg=Reset mod=BOLD, 15:"i" fg=Reset bg=Reset mod=BOLD, 16:"l" fg=Reset bg=Reset mod=BOLD, 17:" " fg=Reset bg=Reset mod=BOLD, 18:"w" fg=Reset bg=Reset mod=BOLD, 19:"i" fg=Reset bg=Reset mod=BOLD, 20:"d" fg=Reset bg=Reset mod=BOLD, 21:"g" fg=Reset bg=Reset mod=BOLD, 22:"e" fg=Reset bg=Reset mod=BOLD, 23:"t" fg=Reset bg=Reset mod=BOLD, 24:" " fg=Reset bg=Reset mod=BOLD, 25:"s" fg=Reset bg=Reset mod=BOLD, 26:"n" fg=Reset bg=Reset mod=BOLD, 27:"a" fg=Reset bg=Reset mod=BOLD, 28:"p" fg=Reset bg=Reset mod=BOLD, 29:"s" fg=Reset bg=Reset mod=BOLD, 30:"h" fg=Reset bg=Reset mod=BOLD, 31:"o" fg=Reset bg=Reset mod=BOLD, 32:"t" fg=Reset bg=Reset mod=BOLD
01: "                                        "
02: "│ 作 成 者         author                  " | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 2:"作" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 4:"成" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 6:"者" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 8:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 9:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 10:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 11:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 12:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 13:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 14:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 15:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 16:"a" fg=Reset bg=Reset mod=NONE, 17:"u" fg=Reset bg=Reset mod=NONE, 18:"t" fg=Reset bg=Reset mod=NONE, 19:"h" fg=Reset bg=Reset mod=NONE, 20:"o" fg=Reset bg=Reset mod=NONE, 21:"r" fg=Reset bg=Reset mod=NONE
03: "│ 作 成 日         2026/01/10              " | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 2:"作" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 4:"成" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 6:"日" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 8:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 9:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 10:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 11:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 12:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 13:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 14:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 15:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 16:"2" fg=Reset bg=Reset mod=NONE, 17:"0" fg=Reset bg=Reset mod=NONE, 18:"2" fg=Reset bg=Reset mod=NONE, 19:"6" fg=Reset bg=Reset mod=NONE, 20:"/" fg=Reset bg=Reset mod=NONE, 21:"0" fg=Reset bg=Reset mod=NONE, 22:"1" fg=Reset bg=Reset mod=NONE, 23:"/" fg=Reset bg=Reset mod=NONE, 24:"1" fg=Reset bg=Reset mod=NONE, 25:"0" fg=Reset bg=Reset mod=NONE
04: "│ 更 新 日         2026/01/15              " | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 2:"更" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 4:"新" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 6:"日" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 8:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 9:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 10:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 11:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 12:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 13:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 14:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 15:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 16:"2" fg=Reset bg=Reset mod=NONE, 17:"0" fg=Reset bg=Reset mod=NONE, 18:"2" fg=Reset bg=Reset mod=NONE, 19:"6" fg=Reset bg=Reset mod=NONE, 20:"/" fg=Reset bg=Reset mod=NONE, 21:"0" fg=Reset bg=Reset mod=NONE, 22:"1" fg=Reset bg=Reset mod=NONE, 23:"/" fg=Reset bg=Reset mod=NONE, 24:"1" fg=Reset bg=Reset mod=NONE, 25:"5" fg=Reset bg=Reset mod=NONE
05: "│ ス テ ー タ ス     In Progress             " | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 2:"ス" fg=Rgb(128, 138, 158) bg=Rgb(46, 58, 85) mod=NONE, 4:"テ" fg=Rgb(128, 138, 158) bg=Rgb(46, 58, 85) mod=NONE, 6:"ー" fg=Rgb(128, 138, 158) bg=Rgb(46, 58, 85) mod=NONE, 8:"タ" fg=Rgb(128, 138, 158) bg=Rgb(46, 58, 85) mod=NONE, 10:"ス" fg=Rgb(128, 138, 158) bg=Rgb(46, 58, 85) mod=NONE, 12:" " fg=Rgb(128, 138, 158) bg=Rgb(46, 58, 85) mod=NONE, 13:" " fg=Rgb(128, 138, 158) bg=Rgb(46, 58, 85) mod=NONE, 14:" " fg=Rgb(128, 138, 158) bg=Rgb(46, 58, 85) mod=NONE, 15:" " fg=Rgb(128, 138, 158) bg=Rgb(46, 58, 85) mod=NONE, 16:"I" fg=Blue bg=Rgb(46, 58, 85) mod=BOLD, 17:"n" fg=Blue bg=Rgb(46, 58, 85) mod=BOLD, 18:" " fg=Blue bg=Rgb(46, 58, 85) mod=BOLD, 19:"P" fg=Blue bg=Rgb(46, 58, 85) mod=BOLD, 20:"r" fg=Blue bg=Rgb(46, 58, 85) mod=BOLD, 21:"o" fg=Blue bg=Rgb(46, 58, 85) mod=BOLD, 22:"g" fg=Blue bg=Rgb(46, 58, 85) mod=BOLD, 23:"r" fg=Blue bg=Rgb(46, 58, 85) mod=BOLD, 24:"e" fg=Blue bg=Rgb(46, 58, 85) mod=BOLD, 25:"s" fg=Blue bg=Rgb(46, 58, 85) mod=BOLD, 26:"s" fg=Blue bg=Rgb(46, 58, 85) mod=BOLD, 27:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 28:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 29:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 30:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 31:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 32:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 33:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 34:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 35:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 36:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 37:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 38:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 39:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE
06: "│ ト ラ ッ カ ー     Bug                     " | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 2:"ト" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 4:"ラ" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 6:"ッ" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 8:"カ" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 10:"ー" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 12:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 13:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 14:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 15:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 16:"B" fg=Reset bg=Reset mod=NONE, 17:"u" fg=Reset bg=Reset mod=NONE, 18:"g" fg=Reset bg=Reset mod=NONE
07: "│ 優 先 度         critical                " | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 2:"優" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 4:"先" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 6:"度" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 8:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 9:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 10:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 11:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 12:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 13:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 14:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 15:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 16:"c" fg=Reset bg=Reset mod=NONE, 17:"r" fg=Reset bg=Reset mod=NONE, 18:"i" fg=Reset bg=Reset mod=NONE, 19:"t" fg=Reset bg=Reset mod=NONE, 20:"i" fg=Reset bg=Reset mod=NONE, 21:"c" fg=Reset bg=Reset mod=NONE, 22:"a" fg=Reset bg=Reset mod=NONE, 23:"l" fg=Reset bg=Reset mod=NONE
08: "│ プ ロ ジ ェ ク ト   Sample Project          " | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 2:"プ" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 4:"ロ" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 6:"ジ" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 8:"ェ" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 10:"ク" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 12:"ト" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 14:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 15:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 16:"S" fg=Reset bg=Reset mod=NONE, 17:"a" fg=Reset bg=Reset mod=NONE, 18:"m" fg=Reset bg=Reset mod=NONE, 19:"p" fg=Reset bg=Reset mod=NONE, 20:"l" fg=Reset bg=Reset mod=NONE, 21:"e" fg=Reset bg=Reset mod=NONE, 23:"P" fg=Reset bg=Reset mod=NONE, 24:"r" fg=Reset bg=Reset mod=NONE, 25:"o" fg=Reset bg=Reset mod=NONE, 26:"j" fg=Reset bg=Reset mod=NONE, 27:"e" fg=Reset bg=Reset mod=NONE, 28:"c" fg=Reset bg=Reset mod=NONE, 29:"t" fg=Reset bg=Reset mod=NONE
09: "│ 担 当 者         alice                   " | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 2:"担" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 4:"当" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 6:"者" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 8:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 9:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 10:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 11:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 12:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 13:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 14:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 15:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 16:"a" fg=Blue bg=Reset mod=NONE, 17:"l" fg=Blue bg=Reset mod=NONE, 18:"i" fg=Blue bg=Reset mod=NONE, 19:"c" fg=Blue bg=Reset mod=NONE, 20:"e" fg=Blue bg=Reset mod=NONE
